--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="color1">#D81B60</color>
-    <color name="color2">#D81B60</color>
-    <color name="color3">#D81B60</color>
-    <color name="color4">#D81B60</color>
+    <color name="color1">#FCFAFB</color>
 </resources>
